syntax = "proto3";
package proto;

import "queries.proto";

service EventService {
	rpc UpsertEvents(UpsertEventsRequest) returns (UpsertEventsResponse) {}
	rpc QueryEvents(QueryEventsRequest) returns (QueryEventsResponse) {}
	rpc DeleteEvents(DeleteEventsRequest) returns (DeleteEventsResponse) {}
}

message UpsertEventsRequest {
	repeated Event events = 1;
}

message UpsertEventsResponse {
	repeated Event events = 1;
}

message QueryEventsRequest {
	EventQuery query = 1;
}

message QueryEventsResponse {
	repeated Event events = 1;
}

message DeleteEventsRequest {
	repeated string ids = 1;
}

message DeleteEventsResponse {};

message Event {
	string id = 1;
	string organization_id = 2;
	string name = 3;
}

message EventQuery {
	oneof query {
		StringQuery id = 1;
		StringQuery organization_id = 2;
		CompoundEventQuery compound = 3;
	}
}

message CompoundEventQuery {
	enum Operator {
		AND = 0;
		OR = 1;
	}

	Operator operator = 1;
	repeated EventQuery queries = 2;
}
